--- a/briar-android/src/main/res/layout/list_item_selectable_contact.xml
+++ b/briar-android/src/main/res/layout/list_item_selectable_contact.xml
@@ -1,69 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
+	android:id="@+id/linearLayout2"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:background="?attr/selectableItemBackground">
 
-	<RelativeLayout
-		android:layout_width="match_parent"
+	<de.hdodenhof.circleimageview.CircleImageView
+		android:id="@+id/avatarView"
+		style="@style/BriarAvatar"
+		android:layout_width="@dimen/listitem_selectable_picture_size"
+		android:layout_height="@dimen/listitem_selectable_picture_size"
+		android:layout_margin="@dimen/listitem_horizontal_margin"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:src="@mipmap/ic_launcher_round"/>
+
+	<com.vanniktech.emoji.EmojiTextView
+		android:id="@+id/nameView"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:background="?attr/selectableItemBackground"
-		android:padding="@dimen/listitem_horizontal_margin">
+		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginStart="@dimen/listitem_horizontal_margin"
+		android:layout_marginTop="@dimen/listitem_horizontal_margin"
+		android:textColor="?android:attr/textColorPrimary"
+		android:textSize="@dimen/text_size_medium"
+		app:layout_constraintBottom_toTopOf="@+id/infoView"
+		app:layout_constraintEnd_toStartOf="@+id/checkBox"
+		app:layout_constraintStart_toEndOf="@+id/avatarView"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintVertical_chainStyle="packed"
+		tools:text="This is a name of a contact with a long name"/>
 
-		<de.hdodenhof.circleimageview.CircleImageView
-			android:id="@+id/avatarView"
-			style="@style/BriarAvatar"
-			android:layout_width="@dimen/listitem_selectable_picture_size"
-			android:layout_height="@dimen/listitem_selectable_picture_size"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentStart="true"
-			android:layout_centerVertical="true"
-			tools:src="@mipmap/ic_launcher_round"/>
+	<TextView
+		android:id="@+id/infoView"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="@dimen/listitem_horizontal_margin"
+		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginStart="@dimen/listitem_horizontal_margin"
+		android:maxLines="2"
+		android:text="@string/forum_invitation_already_sharing"
+		android:textColor="?android:attr/textColorTertiary"
+		android:textSize="@dimen/text_size_small"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="@+id/checkBox"
+		app:layout_constraintStart_toEndOf="@+id/avatarView"
+		app:layout_constraintTop_toBottomOf="@+id/nameView"
+		tools:visibility="visible"/>
 
-		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_centerVertical="true"
-			android:layout_marginLeft="@dimen/listitem_horizontal_margin"
-			android:layout_marginStart="@dimen/listitem_horizontal_margin"
-			android:layout_toEndOf="@+id/avatarView"
-			android:layout_toLeftOf="@+id/checkBox"
-			android:layout_toRightOf="@+id/avatarView"
-			android:orientation="vertical">
+	<CheckBox
+		android:id="@+id/checkBox"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="@dimen/listitem_horizontal_margin"
+		android:clickable="false"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
 
-			<com.vanniktech.emoji.EmojiTextView
-				android:id="@+id/nameView"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textColor="?android:attr/textColorPrimary"
-				android:textSize="@dimen/text_size_large"
-				tools:text="This is a name of a contact with a long name"/>
+	<View
+		android:id="@+id/divider"
+		style="@style/Divider.ContactList"
+		android:layout_width="0dp"
+		android:layout_marginLeft="@dimen/margin_medium"
+		android:layout_marginStart="@dimen/margin_medium"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toEndOf="@id/avatarView"/>
 
-			<TextView
-				android:id="@+id/infoView"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:maxLines="2"
-				android:text="@string/forum_invitation_already_sharing"
-				android:textColor="?android:attr/textColorTertiary"
-				android:textSize="@dimen/text_size_small"
-				tools:visibility="visible"/>
-
-		</LinearLayout>
-
-		<CheckBox
-			android:id="@+id/checkBox"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignParentEnd="true"
-			android:layout_alignParentRight="true"
-			android:layout_centerVertical="true"
-			android:clickable="false"/>
-
-	</RelativeLayout>
-
-	<View style="@style/Divider.ContactList"/>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
