--- a/briar-android/src/main/res/layout/list_item_revealable_contact.xml
+++ b/briar-android/src/main/res/layout/list_item_revealable_contact.xml
@@ -1,76 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
+	android:id="@+id/relativeLayout3"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:background="?attr/selectableItemBackground"
 	android:orientation="vertical">
 
-	<RelativeLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
-		android:layout_width="match_parent"
+	<de.hdodenhof.circleimageview.CircleImageView
+		android:id="@+id/avatarView"
+		style="@style/BriarAvatar"
+		android:layout_width="@dimen/listitem_selectable_picture_size"
+		android:layout_height="@dimen/listitem_selectable_picture_size"
+		android:layout_margin="@dimen/listitem_horizontal_margin"
+		app:layout_constraintBottom_toTopOf="@+id/divider"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:src="@mipmap/ic_launcher_round"/>
+
+	<com.vanniktech.emoji.EmojiTextView
+		android:id="@+id/nameView"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:background="?attr/selectableItemBackground"
-		android:orientation="vertical"
-		android:padding="@dimen/listitem_horizontal_margin">
+		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginStart="@dimen/listitem_horizontal_margin"
+		android:layout_marginTop="@dimen/listitem_vertical_margin"
+		android:textColor="?android:attr/textColorPrimary"
+		android:textSize="@dimen/text_size_medium"
+		app:layout_constraintEnd_toStartOf="@+id/checkBox"
+		app:layout_constraintStart_toEndOf="@+id/avatarView"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:text="Revealable Contact with a long name"/>
 
-		<de.hdodenhof.circleimageview.CircleImageView
-			android:id="@+id/avatarView"
-			style="@style/BriarAvatar"
-			android:layout_width="@dimen/listitem_selectable_picture_size"
-			android:layout_height="@dimen/listitem_selectable_picture_size"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentStart="true"
-			android:layout_marginEnd="@dimen/listitem_horizontal_margin"
-			android:layout_marginRight="@dimen/listitem_horizontal_margin"
-			tools:src="@mipmap/ic_launcher_round"/>
+	<android.support.v7.widget.AppCompatImageView
+		android:id="@+id/visibilityView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
+		android:layout_marginStart="@dimen/listitem_horizontal_margin"
+		android:layout_marginTop="4dp"
+		android:src="@drawable/ic_visibility"
+		app:layout_constraintStart_toEndOf="@+id/avatarView"
+		app:layout_constraintTop_toBottomOf="@+id/nameView"
+		app:tint="?attr/colorControlNormal"
+		tools:ignore="ContentDescription"/>
 
-		<com.vanniktech.emoji.EmojiTextView
-			android:id="@+id/nameView"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_toRightOf="@+id/avatarView"
-			android:textColor="?android:attr/textColorPrimary"
-			android:textSize="@dimen/text_size_large"
-			tools:text="Revealable Contact"/>
+	<TextView
+		android:id="@+id/infoView"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="@dimen/listitem_vertical_margin"
+		android:layout_marginEnd="@dimen/margin_small"
+		android:layout_marginStart="@dimen/margin_small"
+		android:text="@string/groups_reveal_visible"
+		android:textColor="?android:attr/textColorSecondary"
+		android:textSize="@dimen/text_size_small"
+		app:layout_constraintBottom_toTopOf="@+id/divider"
+		app:layout_constraintEnd_toStartOf="@+id/checkBox"
+		app:layout_constraintStart_toEndOf="@+id/visibilityView"
+		app:layout_constraintTop_toTopOf="@+id/visibilityView"
+		tools:visibility="visible"/>
 
-		<android.support.v7.widget.AppCompatImageView
-			android:id="@+id/visibilityView"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_below="@+id/nameView"
-			android:layout_marginRight="@dimen/margin_small"
-			android:layout_toRightOf="@+id/avatarView"
-			android:src="@drawable/ic_visibility"
-			app:tint="?attr/colorControlNormal"
-			tools:ignore="ContentDescription"/>
+	<CheckBox
+		android:id="@+id/checkBox"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="@dimen/listitem_horizontal_margin"
+		android:clickable="false"
+		app:layout_constraintBottom_toTopOf="@+id/divider"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
 
-		<TextView
-			android:id="@+id/infoView"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_below="@+id/nameView"
-			android:layout_toLeftOf="@+id/checkBox"
-			android:layout_toRightOf="@+id/visibilityView"
-			android:gravity="center_vertical"
-			android:text="@string/groups_reveal_visible"
-			android:textColor="?android:attr/textColorSecondary"
-			android:textSize="@dimen/text_size_small"
-			tools:visibility="visible"/>
+	<View
+		android:id="@+id/divider"
+		style="@style/Divider.ContactList"
+		android:layout_width="0dp"
+		android:layout_marginLeft="@dimen/margin_medium"
+		android:layout_marginStart="@dimen/margin_medium"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toEndOf="@id/avatarView"/>
 
-		<CheckBox
-			android:id="@+id/checkBox"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignParentEnd="true"
-			android:layout_alignParentRight="true"
-			android:layout_centerVertical="true"
-			android:clickable="false"/>
-
-	</RelativeLayout>
-
-	<View style="@style/Divider.ContactList"/>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
