--- a/briar-android/src/main/res/values/dimens.xml
+++ b/briar-android/src/main/res/values/dimens.xml
@@ -40,6 +40,8 @@
 
 	<dimen name="message_bubble_radius_big">16dp</dimen>
 	<dimen name="message_bubble_radius_small">4dp</dimen>
+	<dimen name="message_bubble_radius_top_inner">@dimen/message_bubble_radius_small</dimen>
+	<dimen name="message_bubble_radius_top_outer">@dimen/message_bubble_radius_big</dimen>
 	<dimen name="message_bubble_margin">6dp</dimen>
 	<dimen name="message_bubble_padding_sides">12dp</dimen>
 	<dimen name="message_bubble_padding_top">6dp</dimen>
