--- a/briar-android/src/main/res/layout/list_item_thread.xml
+++ b/briar-android/src/main/res/layout/list_item_thread.xml
@@ -1,94 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-	android:id="@+id/layout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:baselineAligned="false"
-	android:background="@drawable/list_item_thread_background"
 	android:orientation="horizontal">
 
-	<RelativeLayout
+	<android.support.constraint.ConstraintLayout
 		android:layout_width="wrap_content"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:background="@drawable/list_item_thread_background">
 
 		<View
 			android:id="@+id/nested_line_1"
 			style="@style/DiscussionLevelIndicator"
-			android:layout_width="@dimen/forum_nested_line_width"
-			android:layout_height="match_parent"
-			android:visibility="gone"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
 			tools:visibility="visible"/>
 
 		<View
 			android:id="@+id/nested_line_2"
 			style="@style/DiscussionLevelIndicator"
-			android:layout_width="@dimen/forum_nested_line_width"
-			android:layout_height="match_parent"
-			android:layout_toRightOf="@id/nested_line_1"
-			android:visibility="gone"/>
+			app:layout_constraintStart_toEndOf="@id/nested_line_1"
+			app:layout_constraintTop_toTopOf="parent"
+			tools:visibility="visible"/>
 
 		<View
 			android:id="@+id/nested_line_3"
 			style="@style/DiscussionLevelIndicator"
-			android:layout_width="@dimen/forum_nested_line_width"
-			android:layout_height="match_parent"
-			android:layout_toRightOf="@id/nested_line_2"
-			android:visibility="gone"/>
+			app:layout_constraintStart_toEndOf="@id/nested_line_2"
+			app:layout_constraintTop_toTopOf="parent"
+			tools:visibility="visible"/>
 
 		<View
 			android:id="@+id/nested_line_4"
 			style="@style/DiscussionLevelIndicator"
-			android:layout_width="@dimen/forum_nested_line_width"
-			android:layout_height="match_parent"
-			android:layout_toRightOf="@id/nested_line_3"
-			android:visibility="gone"/>
+			app:layout_constraintStart_toEndOf="@id/nested_line_3"
+			app:layout_constraintTop_toTopOf="parent"/>
 
 		<View
 			android:id="@+id/nested_line_5"
 			style="@style/DiscussionLevelIndicator"
-			android:layout_width="@dimen/forum_nested_line_width"
-			android:layout_height="match_parent"
-			android:layout_toRightOf="@id/nested_line_4"
-			android:visibility="gone"/>
+			app:layout_constraintStart_toEndOf="@id/nested_line_4"
+			app:layout_constraintTop_toTopOf="parent"
+			tools:visibility="visible"/>
 
 		<TextView
 			android:id="@+id/nested_line_text"
 			android:layout_width="@dimen/forum_nested_indicator"
 			android:layout_height="@dimen/forum_nested_indicator"
-			android:layout_centerInParent="true"
 			android:background="@drawable/level_indicator_circle"
 			android:gravity="center"
 			android:textSize="@dimen/text_size_small"
-			android:visibility="gone"/>
+			android:visibility="gone"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			tools:text="42"
+			tools:visibility="visible"/>
 
-	</RelativeLayout>
+	</android.support.constraint.ConstraintLayout>
 
-	<RelativeLayout
+	<android.support.constraint.ConstraintLayout
+		android:id="@+id/layout"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_weight="1">
+		android:layout_weight="1"
+		android:background="@drawable/list_item_thread_background">
+
+		<View
+			android:id="@+id/divider"
+			style="@style/Divider.ThreadItem"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintTop_toTopOf="parent"/>
 
 		<com.vanniktech.emoji.EmojiTextView
 			android:id="@+id/text"
-			android:layout_width="match_parent"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:padding="@dimen/margin_medium"
 			android:textColor="?android:attr/textColorPrimary"
 			android:textIsSelectable="true"
 			android:textSize="@dimen/text_size_medium"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/divider"
 			tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."/>
 
 		<org.briarproject.briar.android.view.AuthorView
 			android:id="@+id/author"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:layout_alignLeft="@id/text"
-			android:layout_below="@id/text"
-			android:layout_marginLeft="@dimen/margin_medium"
-			android:layout_toLeftOf="@+id/btn_reply"
+			android:layout_marginBottom="@dimen/margin_medium"
+			android:layout_marginEnd="@dimen/margin_medium"
+			android:layout_marginStart="@dimen/margin_medium"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toStartOf="@+id/btn_reply"
+			app:layout_constraintStart_toStartOf="@id/text"
+			app:layout_constraintTop_toBottomOf="@id/text"
 			app:persona="commenter"/>
 
 		<TextView
@@ -96,19 +108,14 @@
 			style="@style/BriarButtonFlat.Positive.Tiny"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignBottom="@+id/author"
-			android:layout_alignParentRight="true"
-			android:layout_below="@+id/text"
-			android:layout_marginRight="@dimen/margin_medium"
+			android:layout_marginEnd="@dimen/margin_medium"
+			android:layout_marginStart="@dimen/margin_medium"
 			android:text="@string/btn_reply"
-			android:textSize="@dimen/text_size_tiny"/>
+			android:textSize="@dimen/text_size_tiny"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/text"/>
 
-		<View
-			style="@style/Divider.ThreadItem"
-			android:layout_alignLeft="@id/text"
-			android:layout_below="@+id/author"
-			android:layout_marginTop="@dimen/margin_medium"/>
-
-	</RelativeLayout>
+	</android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
