--- a/briar-android/src/main/res/drawable/level_indicator_circle.xml
+++ b/briar-android/src/main/res/drawable/level_indicator_circle.xml
@@ -3,9 +3,9 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="oval">
 
-	<solid android:color="@color/window_background"/>
+	<solid android:color="@color/thread_item_background"/>
 
 	<stroke
-		android:width="2dp"
+		android:width="@dimen/forum_nested_line_width"
 		android:color="@color/thread_indicator"/>
 </shape>
