Simplify dev reporter and add RTL support

--- a/briar-android/src/main/res/layout/activity_dev_report.xml
+++ b/briar-android/src/main/res/layout/activity_dev_report.xml
@@ -86,7 +86,7 @@
 
 		<ScrollView
 			android:id="@+id/report_scroll"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@id/include_debug_report">
